codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_approval_form_without_schema.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  Field 1/1                                                                                                             
  Allow this request?                                                                                                   
  › 1. 允 许   运 行 工 具 并 继 续 。                                                                                            
    2. 取 消   取 消 此 工 具 调 用                                                                                              
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter to submit | esc to cancel
