codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_message_only_form_with_persist_options.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  Field 1/1                                                                                                             
  Boolean elicit MCP example: do you confirm?                                                                           
  › 1. 允 许             允 许 此 请 求 并 继 续 。                                                                                
    2. 本 次 会 话 中 允 许   允 许 此 请 求 ， 并 在 本 次 会 话 中 记 住 此 选 择 。                                                            
    3. 始 终 允 许         允 许 此 请 求 ， 并 为 今 后 的 请 求 记 住 此 选 择 。                                                            
    4. 拒 绝             拒 绝 此 请 求 并 继 续 。                                                                                
    5. 取 消             取 消 此 请 求                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter to submit | esc to cancel
