codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_text_configured_key_chords.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: snapshot
---

  Field 1/1 (1 required unanswered)
  Enter a name

  Name

  › 输 入 回 答

  ctrl + x enter to submit | esc to cancel
